--- a/resources/index.html
+++ b/resources/index.html
@@ -9,18 +9,10 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" type="text/css" href="../vendors/css/grid.css">
     <title>Loja Panini - Tem tudo que você procura</title>
-    <link rel="shortcut icon" href="./img/logo-1.jfif" type="image/x-icon">
+    <link rel="shortcut icon" href="" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 <body>
-    <header>
-        <div class="row header">
-            <a href="#"><img src="./img/logo.jfif" alt="Logo Panini"></a>
-            <form>
-                <input type="text" placeholder="O que você procura?">
-                <button><i class="bi bi-search button-search"></i></button>
-            </form>
-        </div>
-    </header>
+    
 </body>
 </html>
