--- a/resources/index.html
+++ b/resources/index.html
@@ -8,16 +8,21 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400&amp;subset=latin-ext" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" type="text/css" href="../vendors/css/grid.css">
-    <title>Loja Panini - Tem tudo que você procura</title>
-    <link rel="shortcut icon" href="" type="image/x-icon">
+    <title>Cine Avenida</title>
+    <link rel="shortcut icon" href="./css/img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 <body>
     <header>
         <div class="container">
             <div class="header">
+                <div class="menu-burguer" onclick="abrirMenu()">
+                    <div class="linha"></div>
+                    <div class="linha"></div>
+                    <div class="linha"></div>
+                </div>
                 <a href="#">
-                <img src="logo.png" alt="Logo" class="logo">
+                <img src="./css/img/logo.png" alt="Logo" class="logo">
                 </a>
                 <form class="search">
                 <input type="text" placeholder="Pesquisar...">
@@ -27,9 +32,9 @@
                     <div class="dropdown user">
                         <i class="bi bi-person-circle"></i>
                     <div class="dropdown-content">
-                        <a href="#">Minha conta</a>
+                        <a href="#">Logar</a>
                         <hr/>
-                        <a href="#">Logout</a>
+                        <a href="#">Criar Conta</a>
                     </div>
                 </div>
                 <div class="cart">
@@ -37,6 +42,32 @@
                 </div>
             </div>
         </div>
-      </header>
+    </header>
+
+    <!-- SUB-MENU -->
+
+    <nav class="none">
+        <ul class="menu container">
+          <li><a href="#">Programação</a></li>
+          <li><a href="#">Em cartaz</a></li>
+          <li><a href="#">Compra on-line</a></li>
+        </ul>
+    </nav>
+
+    <!-- BANNER -->
+
+    <div class="banner">
+        <div class="banner-text">
+          <h1>Jujutsu Kaisen 0</h1>
+          <p>
+            O jovem Yuta Okkotsu ganha o controle de um espírito extremamente poderoso, 
+            então um grupo de feiticeiros o matriculam na Tokyo Prefectural Jujutsu High 
+            School, para ajudá-lo a controlar esse poder e também para ficar de olho nele.</p>
+          <a href="#" class="button">Garanta seu ingresso</a>
+        </div>
+    </div>
+
+
+    <script src="./js/script.js"></script>
 </body>
 </html>
