--- a/resources/index.html
+++ b/resources/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" type="text/css" href="../vendors/css/grid.css">
     <title>Cine Avenida</title>
-    <link rel="shortcut icon" href="./css/img/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 <body>
@@ -22,7 +22,7 @@
                     <div class="linha"></div>
                 </div>
                 <a href="#">
-                <img src="./css/img/logo.png" alt="Logo" class="logo">
+                <img src="./img/logo.png" alt="Logo" class="logo">
                 </a>
                 <form class="search">
                 <input type="text" placeholder="Pesquisar...">
@@ -66,6 +66,19 @@
           <a href="#" class="button">Garanta seu ingresso</a>
         </div>
     </div>
+
+    <!-- CINEMA -->
+
+    <div class="cinema container">
+        <div href="#" class="filmes">
+            <h1>Filmes em Cartaz</h1>
+              
+        </div>
+        <div href="#" class="aluguel">Alugar Sala</div>
+        <div class="champions">
+            <p>Final da Champions League: 29 de maio</p>
+        </div>
+      </div>
 
 
     <script src="./js/script.js"></script>
