--- a/resources/index.html
+++ b/resources/index.html
@@ -49,7 +49,7 @@
     <nav class="none">
         <ul class="menu container">
           <li><a href="#">Programação</a></li>
-          <li><a href="#">Em cartaz</a></li>
+          <li><a href="#emcartaz">Em cartaz</a></li>
           <li><a href="#">Compra on-line</a></li>
         </ul>
     </nav>
@@ -72,7 +72,7 @@
 
     <div class="container">
         <div class="filmes">
-            <div class="emCartaz">
+            <div id="emcartaz" class="emCartaz">
                 <div class="emCartaz-title">Filmes em Cartaz</div>
                 <div class="listaCartaz">
                         <div class="filme filme-1">
