--- a/resources/index.html
+++ b/resources/index.html
@@ -56,16 +56,57 @@
 
     
     <!-- Banner -->
-
-    <div class="banner">
-        <div class="banner-text">
-        <h1>Jujutsu Kaisen 0</h1>
-        <p>
-            O jovem Yuta Okkotsu ganha o controle de um espírito extremamente poderoso, 
-            então um grupo de feiticeiros o matriculam na Tokyo Prefectural Jujutsu High 
-            School, para ajudá-lo a controlar esse poder e também para ficar de olho nele.</p>
-        <a href="#" class="button">Garanta seu ingresso</a>
+    <div class="area-banner">
+        <div class="banner banner-1">
+            <div class="banner-text">
+            <h1>Jujutsu Kaisen 0</h1>
+            <p>
+                O jovem Yuta Okkotsu ganha o controle de um espírito extremamente poderoso, 
+                então um grupo de feiticeiros o matriculam na Tokyo Prefectural Jujutsu High 
+                School, para ajudá-lo a controlar esse poder e também para ficar de olho nele.</p>
+            <a href="#" class="button">Garanta seu ingresso</a>
+            </div>
         </div>
+        <div class="banner-2 none">
+            <div class="banner-text">
+            <h1>Demon Slayer - Movie</h1>
+            <p>
+                O jovem Yuta Okkotsu ganha o controle de um espírito extremamente poderoso, 
+                então um grupo de feiticeiros o matriculam na Tokyo Prefectural Jujutsu High 
+                School, para ajudá-lo a controlar esse poder e também para ficar de olho nele.</p>
+            <a href="#" class="button">Garanta seu ingresso</a>
+            </div>
+        </div>
+        <div class="banner-3 none">
+            <div class="banner-text">
+            <h1>Guardiões da Galaxia</h1>
+            <p>
+                O jovem Yuta Okkotsu ganha o controle de um espírito extremamente poderoso, 
+                então um grupo de feiticeiros o matriculam na Tokyo Prefectural Jujutsu High 
+                School, para ajudá-lo a controlar esse poder e também para ficar de olho nele.</p>
+            <a href="#" class="button">Garanta seu ingresso</a>
+            </div>
+        </div>
+        <div class="banner-4 none">
+            <div class="banner-text">
+            <h1>John Wick 4</h1>
+            <p>
+                O jovem Yuta Okkotsu ganha o controle de um espírito extremamente poderoso, 
+                então um grupo de feiticeiros o matriculam na Tokyo Prefectural Jujutsu High 
+                School, para ajudá-lo a controlar esse poder e também para ficar de olho nele.</p>
+            <a href="#" class="button">Garanta seu ingresso</a>
+            </div>
+        </div>
+        <div class="controls">
+            <img src="./img/seta.png" alt="anterior" class="anterior" onclick="anterior()">
+            <img src="./img/seta.png" alt="proximo" class="proximo" onclick="proximo()">
+        </div>
+    </div>
+    <div class="selections">
+        <div id="banner-1" class="select-banner active"></div>
+        <div id="banner-2" class="select-banner"></div>
+        <div id="banner-3" class="select-banner"></div>
+        <div id="banner-4" class="select-banner"></div>
     </div>
     
     <!-- CINEMA -->
