--- a/resources/index.html
+++ b/resources/index.html
@@ -67,7 +67,7 @@
             <a href="#" class="button">Garanta seu ingresso</a>
             </div>
         </div>
-        <div class="banner-2 none">
+        <div class="banner-2 b-none">
             <div class="banner-text">
             <h1>Demon Slayer - Movie</h1>
             <p>
@@ -77,7 +77,7 @@
             <a href="#" class="button">Garanta seu ingresso</a>
             </div>
         </div>
-        <div class="banner-3 none">
+        <div class="banner-3 b-none">
             <div class="banner-text">
             <h1>Guardiões da Galaxia</h1>
             <p>
@@ -87,7 +87,7 @@
             <a href="#" class="button">Garanta seu ingresso</a>
             </div>
         </div>
-        <div class="banner-4 none">
+        <div class="banner-4 b-none">
             <div class="banner-text">
             <h1>John Wick 4</h1>
             <p>
@@ -110,10 +110,7 @@
     </div>
     
     <!-- CINEMA -->
-
-    <div class="container">
-        <div class="filmes">
-            <div id="emcartaz" class="emCartaz">
+            <div id="emcartaz" class="emCartaz container">
                 <div class="emCartaz-title">Filmes em Cartaz</div>
                 <div class="listaCartaz">
                         <div class="filme filme-1">
@@ -131,10 +128,66 @@
                                 <img src="./img/filme1.jpeg" alt="Jujutsu Kaisen 0">
                             </div>
                         </div>
+                        <div class="filme filme-3">
+                            <div class="imagem">
+                                <img src="./img/filme1.jpeg" alt="Jujutsu Kaisen 0">
+                            </div>
+                        </div>
+                        <div class="filme filme-3">
+                            <div class="imagem">
+                                <img src="./img/filme1.jpeg" alt="Jujutsu Kaisen 0">
+                            </div>
+                        </div>
+                        <div class="filme filme-5">
+                            <div class="imagem">
+                                <img src="./img/filme1.jpeg" alt="Jujutsu Kaisen 0">
+                            </div>
+                        </div>
+                        <div class="bot container">
+                            <button onclick="menos()" class="btn-prev">&lt;</button>
+                            <button onclick="mais()" class="btn-next">&gt;</button>
+                        </div>
                 </div>
             </div>
-            <div class="emBreve">
+            <hr/>
+            <div class="emBreve container">
                 <div class="emBreve-title">Proximos Lançamentos</div>
+                <div class="listaCartaz">
+                    <div class="filme filme-1">
+                        <div class="imagem">
+                            <img src="./img/filme1.jpeg" alt="Jujutsu Kaisen 0">
+                        </div>
+                    </div>
+                    <div class="filme filme-2">
+                        <div class="imagem">
+                            <img src="./img/filme1.jpeg" alt="Jujutsu Kaisen 0">
+                        </div>
+                    </div>
+                    <div class="filme filme-3">
+                        <div class="imagem">
+                            <img src="./img/filme1.jpeg" alt="Jujutsu Kaisen 0">
+                        </div>
+                    </div>
+                    <div class="filme filme-3">
+                        <div class="imagem">
+                            <img src="./img/filme1.jpeg" alt="Jujutsu Kaisen 0">
+                        </div>
+                    </div>
+                    <div class="filme filme-3">
+                        <div class="imagem">
+                            <img src="./img/filme1.jpeg" alt="Jujutsu Kaisen 0">
+                        </div>
+                    </div>
+                    <div class="filme filme-5">
+                        <div class="imagem">
+                            <img src="./img/filme1.jpeg" alt="Jujutsu Kaisen 0">
+                        </div>
+                    </div>
+                    <div class="bot container">
+                        <button onclick="menos()" class="btn-prev">&lt;</button>
+                        <button onclick="mais()" class="btn-next">&gt;</button>
+                    </div>
+            </div>
             </div>
         </div>
     </div>
