--- a/resources/index.html
+++ b/resources/index.html
@@ -71,19 +71,21 @@
             <div class="banner-text">
             <h1>Demon Slayer - Movie</h1>
             <p>
-                O jovem Yuta Okkotsu ganha o controle de um espírito extremamente poderoso, 
-                então um grupo de feiticeiros o matriculam na Tokyo Prefectural Jujutsu High 
-                School, para ajudá-lo a controlar esse poder e também para ficar de olho nele.</p>
+                Em Demon Slayer - Mugen Train, durante o período Taisho no Japão, o jovem Tanjiro 
+                volta para casa depois de um dia de trabalho e encontra sua família brutalmente 
+                assassinada por um demônio. Para pior a situação, sua irmã mais jovem, Nezuko, 
+                foi transformada em uma criatura demoníaca. Agora ele precisará lutar para vingar 
+                sua família e recuperar a irmã.</p>
             <a href="#" class="button">Garanta seu ingresso</a>
             </div>
         </div>
         <div class="banner-3 b-none">
             <div class="banner-text">
-            <h1>Guardiões da Galaxia</h1>
+            <h1>Guardiões da Galaxia 3</h1>
             <p>
-                O jovem Yuta Okkotsu ganha o controle de um espírito extremamente poderoso, 
-                então um grupo de feiticeiros o matriculam na Tokyo Prefectural Jujutsu High 
-                School, para ajudá-lo a controlar esse poder e também para ficar de olho nele.</p>
+                Peter Quill deve reunir sua equipe para defender o universo e 
+                proteger um dos seus. Se a missão não for totalmente bem-sucedida,
+                 isso pode levar ao fim dos Guardiões.</p>
             <a href="#" class="button">Garanta seu ingresso</a>
             </div>
         </div>
@@ -91,9 +93,9 @@
             <div class="banner-text">
             <h1>John Wick 4</h1>
             <p>
-                O jovem Yuta Okkotsu ganha o controle de um espírito extremamente poderoso, 
-                então um grupo de feiticeiros o matriculam na Tokyo Prefectural Jujutsu High 
-                School, para ajudá-lo a controlar esse poder e também para ficar de olho nele.</p>
+                Com o preço por sua cabeça cada vez maior, o lendário assassino de aluguel John Wick
+                 leva sua luta contra o High Table global enquanto procura os jogadores mais poderosos 
+                 do submundo, de Nova York a Paris, do Japão a Berlim.</p>
             <a href="#" class="button">Garanta seu ingresso</a>
             </div>
         </div>
@@ -110,49 +112,9 @@
     </div>
     
     <!-- CINEMA -->
-            <div id="emcartaz" class="emCartaz container">
-                <div class="emCartaz-title">Filmes em Cartaz</div>
-                <div class="listaCartaz">
-                        <div class="filme filme-1">
-                            <div class="imagem">
-                                <img src="./img/filme1.jpeg" alt="Jujutsu Kaisen 0">
-                            </div>
-                        </div>
-                        <div class="filme filme-2">
-                            <div class="imagem">
-                                <img src="./img/filme1.jpeg" alt="Jujutsu Kaisen 0">
-                            </div>
-                        </div>
-                        <div class="filme filme-3">
-                            <div class="imagem">
-                                <img src="./img/filme1.jpeg" alt="Jujutsu Kaisen 0">
-                            </div>
-                        </div>
-                        <div class="filme filme-3">
-                            <div class="imagem">
-                                <img src="./img/filme1.jpeg" alt="Jujutsu Kaisen 0">
-                            </div>
-                        </div>
-                        <div class="filme filme-3">
-                            <div class="imagem">
-                                <img src="./img/filme1.jpeg" alt="Jujutsu Kaisen 0">
-                            </div>
-                        </div>
-                        <div class="filme filme-5">
-                            <div class="imagem">
-                                <img src="./img/filme1.jpeg" alt="Jujutsu Kaisen 0">
-                            </div>
-                        </div>
-                        <div class="bot container">
-                            <button onclick="menos()" class="btn-prev">&lt;</button>
-                            <button onclick="mais()" class="btn-next">&gt;</button>
-                        </div>
-                </div>
-            </div>
-            <hr/>
-            <div class="emBreve container">
-                <div class="emBreve-title">Proximos Lançamentos</div>
-                <div class="listaCartaz">
+        <div id="emcartaz" class="emCartaz container">
+            <div class="emCartaz-title">Filmes em Cartaz</div>
+            <div class="listaCartaz">
                     <div class="filme filme-1">
                         <div class="imagem">
                             <img src="./img/filme1.jpeg" alt="Jujutsu Kaisen 0">
@@ -188,21 +150,70 @@
                         <button onclick="mais()" class="btn-next">&gt;</button>
                     </div>
             </div>
+        </div>
+
+        <hr class="linha container"/>
+
+        <div class="emBreve container">
+            <div class="emBreve-title">Proximos Lançamentos</div>
+            <div class="listaCartaz">
+                <div class="filme filme-1">
+                    <div class="imagem">
+                        <img src="./img/filme1.jpeg" alt="Jujutsu Kaisen 0">
+                    </div>
+                </div>
+                <div class="filme filme-2">
+                    <div class="imagem">
+                        <img src="./img/filme1.jpeg" alt="Jujutsu Kaisen 0">
+                    </div>
+                </div>
+                <div class="filme filme-3">
+                    <div class="imagem">
+                        <img src="./img/filme1.jpeg" alt="Jujutsu Kaisen 0">
+                    </div>
+                </div>
+                <div class="filme filme-3">
+                    <div class="imagem">
+                        <img src="./img/filme1.jpeg" alt="Jujutsu Kaisen 0">
+                    </div>
+                </div>
+                <div class="filme filme-3">
+                    <div class="imagem">
+                        <img src="./img/filme1.jpeg" alt="Jujutsu Kaisen 0">
+                    </div>
+                </div>
+                <div class="filme filme-5">
+                    <div class="imagem">
+                        <img src="./img/filme1.jpeg" alt="Jujutsu Kaisen 0">
+                    </div>
+                </div>
+                <div class="bot container">
+                    <button onclick="menos()" class="btn-prev">&lt;</button>
+                    <button onclick="mais()" class="btn-next">&gt;</button>
+                </div>
             </div>
         </div>
-    </div>
+
+        <hr class="linha container"/>
 
 
 
 
     <div class="container">
         <div class="features">
-            <div>gf</div>
-            <div>gf</div>
-            <div>gf</div>
-            <div>gf</div>
-            <div>gf</div>
-            <div>gf</div>
+            <div class="hora">
+                <img class="imagem-grid" src="./img/clock.svg"/>
+                <h3>Horário de Funcionamento:</h3>
+                <h2>14:00 - 22:00</h2>
+            </div>
+            <div class="aluguel">
+                <img class="imagem-grid" src="./img/gift.svg"/>
+                <h3>Venha comemorar o seu aniversário com a gente.</h3>
+            </div>
+            <div class="reserva">
+                <img class="imagem-grid" src="./img/ticket-perforated.svg"/>
+                <h3>Reserve seu ingresso</h3>
+            </div>
         </div>
     </div>
 
