--- a/resources/index.html
+++ b/resources/index.html
@@ -112,6 +112,7 @@
     </div>
     
     <!-- CINEMA -->
+    <main>
         <div id="emcartaz" class="emCartaz container">
             <div class="emCartaz-title">Filmes em Cartaz</div>
             <div class="listaCartaz">
@@ -151,7 +152,7 @@
                     </div>
             </div>
         </div>
-
+    </main>
         <hr class="linha container"/>
 
         <div class="emBreve container">
@@ -196,9 +197,6 @@
 
         <hr class="linha container"/>
 
-
-
-
     <div class="container">
         <div class="features">
             <div class="hora">
@@ -216,6 +214,25 @@
             </div>
         </div>
     </div>
+
+    <hr class="linha container"/>
+
+    <div class="galeria container">
+        <h1>Galeria:</h1>
+        <div class="imgs-galeria">
+            <div class="img-galeria"><img src="./img/sala.jpg"/></div>
+            <div class="img-galeria"><img src="./img/sala2.jpg"/></div>
+            <div class="img-galeria"><img src="./img/sala.jpg"/></div>
+            <div class="img-galeria"><img src="./img/sala.jpg"/></div>
+            <div class="img-galeria"><img src="./img/sala.jpg"/></div>
+            <div class="img-galeria"><img src="./img/sala.jpg"/></div>
+            <div class="img-galeria"><img src="./img/sala.jpg"/></div>
+            <div class="img-galeria"><img src="./img/sala.jpg"/></div>
+        </div>
+    </div>
+
+    <hr class="linha container"/>
+
 
     <script src="./js/script.js"></script>
 </body>
