--- a/resources/index.html
+++ b/resources/index.html
@@ -233,6 +233,40 @@
 
     <hr class="linha container"/>
 
+    <div class="container app">
+        <div class="app-title">Esperando o que? Basatam 3 passos</div>
+        <div class="app-body">
+            <div class="app-img"><img src="./img/hero-img.png"/></div>
+            <div class="app-pacos">
+                <div class="app-paco">
+                    <div class="num-paco">1</div>
+                    <div class="text-paco">Selecione qual plano melhor se encaixa no seu bolso!</div>
+                </div>
+                <div class="app-paco">
+                    <div class="num-paco">2</div>
+                    <div class="text-paco">Escolha o filme que melhor se encaixa no seu gosto!</div>
+                </div>
+                <div class="app-paco">
+                    <div class="num-paco">3</div>
+                    <div class="text-paco">Vá ao cinema e aproveite!</div>
+                </div>
+
+                <div class="app-logo">
+                    <img src="./img/download-app-android.png" alt="">
+                    <img src="./img/download-app.svg" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <hr class="linha container"/>
+
+    <div class="avalia">
+        <div class="ttt">
+            <div class="avalia-title">Sua diversão nossa responsabilidade</div>
+        </div>
+    </div>
+
 
     <script src="./js/script.js"></script>
 </body>
