--- a/resources/index.html
+++ b/resources/index.html
@@ -146,10 +146,10 @@
                             <img src="./img/filme1.jpeg" alt="Jujutsu Kaisen 0">
                         </div>
                     </div>
-                    <div class="bot container">
-                        <button onclick="menos()" class="btn-prev">&lt;</button>
-                        <button onclick="mais()" class="btn-next">&gt;</button>
-                    </div>
+            </div>
+            <div class="bot container">
+                <button onclick="menos()" class="btn-prev btn-none btn-menos">&lt;</button>
+                <button onclick="mais()" class="btn-next btn-mais">&gt;</button>
             </div>
         </div>
     </main>
@@ -188,11 +188,11 @@
                         <img src="./img/filme1.jpeg" alt="Jujutsu Kaisen 0">
                     </div>
                 </div>
-                <div class="bot container">
-                    <button onclick="menos()" class="btn-prev">&lt;</button>
-                    <button onclick="mais()" class="btn-next">&gt;</button>
-                </div>
             </div>
+            <div class="bot container">
+                    <button onclick="menosE()" class="btn-prev">&lt;</button>
+                    <button onclick="maise()" class="btn-next">&gt;</button>
+                </div>
         </div>
 
         <hr class="linha container"/>
