SCROLL-HORIZONTAL-PRONTO

--- a/resources/index.html
+++ b/resources/index.html
@@ -157,7 +157,7 @@
 
         <div class="emBreve container">
             <div class="emBreve-title">Proximos Lançamentos</div>
-            <div class="listaCartaz">
+            <div class="listaCartazE">
                 <div class="filme filme-1">
                     <div class="imagem">
                         <img src="./img/filme1.jpeg" alt="Jujutsu Kaisen 0">
@@ -190,8 +190,8 @@
                 </div>
             </div>
             <div class="bot container">
-                    <button onclick="menosE()" class="btn-prev">&lt;</button>
-                    <button onclick="maise()" class="btn-next">&gt;</button>
+                    <button onclick="menosE()" class="btn-prev btn-none btn-menosE">&lt;</button>
+                    <button onclick="maisE()" class="btn-next btn-maisE">&gt;</button>
                 </div>
         </div>
 
