--- a/resources/index.html
+++ b/resources/index.html
@@ -32,9 +32,9 @@
                     <div class="dropdown user">
                         <i class="bi bi-person-circle"></i>
                     <div class="dropdown-content">
-                        <a href="#">Logar</a>
+                        <a href="./pages/login.html">Logar</a>
                         <hr/>
-                        <a href="#">Criar Conta</a>
+                        <a href="./pages/criar.html">Criar Conta</a>
                     </div>
                 </div>
                 <div class="cart">
