--- a/resources/pages/criar.html
+++ b/resources/pages/criar.html
@@ -58,7 +58,7 @@
 
     <section class="container">
         <form class="area-form">
-            <h2 class="form-title">Formulário de Login</h2>
+            <h2 class="form-title">Criar Conta</h2>
             <div class="input-group">
                 <label for="useremail">Email:</label>
                 <input type="email" id="useremail" name="useremail" required>
