--- a/resources/pages/login.html
+++ b/resources/pages/login.html
@@ -58,7 +58,7 @@
 
     <section class="container">
         <form class="area-form">
-            <h2 class="form-title">Formulário de Login</h2>
+            <h2 class="form-title">Login</h2>
             <div class="input-group">
               <label for="username">Usuário:</label>
               <input type="text" id="username" name="username" required>
